# bridgebloc

./: .codecov.yml  .gitignore  LICENSE  README.md  bridgebloc.code-workspace
.github/workflows/: ci.yml
backend/: .env.example  .pylintrc  Makefile  Procfile  entrypoint.sh  manage.py  pyproject.toml  requirements.txt  start.sh
backend/bridgebloc/: conftest.py
backend/bridgebloc/apps/accounts/: apps.py  authentication.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/bridgebloc/apps/accounts/migrations/: 0001_initial.py
backend/bridgebloc/apps/accounts/tests/: test_views.py
backend/bridgebloc/apps/conversions/: apps.py  constants.py  enums.py  models.py  permissions.py  serializers.py  tasks.py  tests.py  types.py  urls.py  utils.py  views.py
backend/bridgebloc/apps/conversions/migrations/: 0001_initial.py  0002_alter_tokenconversionstep_step_type.py
backend/bridgebloc/apps/core/: apps.py  urls.py  views.py
backend/bridgebloc/apps/core/tests/: test_views.py
backend/bridgebloc/apps/tokens/: apps.py  models.py  serializers.py  urls.py  views.py
backend/bridgebloc/apps/tokens/management/commands/: fetch_tokens.py
backend/bridgebloc/apps/tokens/migrations/: 0001_initial.py
backend/bridgebloc/common/: fields.py  helpers.py  models.py  openapi.py  types.py  views.py
backend/bridgebloc/conf/: asgi.py  settings.py  urls.py  wsgi.py
backend/bridgebloc/docs/: schema.yml
backend/bridgebloc/evm/: aggregator.py  client.py  constants.py  types.py  utils.py
backend/bridgebloc/evm/abis/: CrossChainBridge.abi  PolygonZkEVMBridge.abi  RollupBridge.abi
backend/bridgebloc/services/: attestation.py  circle.py  lxly_merkle_proof.py
contracts/: .gitignore  Makefile  config.txt  deployment-addresses.txt  hardhat-arb-fork.config.ts  hardhat-arb-testnet-fork.config.ts  hardhat-avax-fork.config.ts  hardhat-goerli-fork.config.ts  hardhat.config.ts  package-lock.json  package.json  supported-tokens.json
contracts/LxLy-contracts/contracts/: Bridge.sol
contracts/LxLy-contracts/contracts/interfaces/: WETH.sol
contracts/LxLy/libraries/: PolygonBridgeLib.sol
contracts/cctp/: Bridge.sol
contracts/cctp-contracts/: Bridge.sol
contracts/cctp-contracts/interfaces/: ITokenMessenger.sol
contracts/config/: cctp.ts  lxly.ts
contracts/config/abi/: ISwapRouter.json
contracts/contracts/: Bridge.sol
contracts/contracts/LxLy/: Bridge.sol  ethBridge.sol
contracts/contracts/LxLy/interfaces/: ISwapRouter.sol  WETH.sol
contracts/contracts/LxLy/libraries/: PolygonBridgeLib.sol
contracts/contracts/LxLy/polygonZKEVMContracts/: PolygonZkEVMBridge.sol  PolygonZkEVMGlobalExitRoot.sol
contracts/contracts/cctp/: Bridge.sol
contracts/contracts/cctp/interfaces/: IAvaxSwapRouter.sol  IMessageTransmitter.sol  IOneSplit.sol  ITokenMessenger.sol
contracts/scripts/: deploy-cctp.ts  integration-test.ts  lxly.ts
contracts/test/: Bridge.ts  LxLyBridge.ts  cctp-bridge-arb.spec.ts  cctp-bridge-avax.spec.ts  cctp-bridge-eth.spec.ts  cctp-bridge.spec.ts  lxly-bridge-eth.spec.ts  lxly-bridge.spec.ts
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  wagmi-setup.ts
frontend/src/constants/: data.ts
frontend/src/context/: AppContext.tsx  Providers.tsx
frontend/src/contracts/: addresses.tsx  index.ts
frontend/src/helpers/: contract.ts  text.ts  wallet.ts
frontend/src/hooks/: useAppMenu.tsx  useAppModal.tsx  useClickOut.tsx  useTheme.tsx
frontend/src/styles/: index.scss
frontend/src/typings/: index.ts
frontend/src/utils/: address.ts  axios.ts
(+43 files in other folders)
